# picturas

./: .gitignore  docker-compose.dev.yml  docker-compose.yml
api-gateway/: Caddyfile  docker-compose.yml
bg-remover-tool-ms/: .env.example  docker-compose.yml  pyproject.toml
bg-remover-tool-ms/src/: bg_remover_request_message.py  bg_remover_tool.py  config.py  main.py
frontend/: .gitignore  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: CanvasImage.vue  ImageActions.vue  NavBar.vue  SidebarTool.vue  TheWelcome.vue  UserAuthForm.vue
frontend/src/components/icons/: Binarization.vue  Grayscale.vue
frontend/src/components/ui/accordion/: AccordionItem.vue
frontend/src/lib/: auth.ts
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/views/: AboutView.vue  ChangePass.vue  CreateAccount.vue  EditImageView.vue  FormView.vue  HomeView.vue  ImageEditor.vue  LoginView.vue  ProjectView.vue  ProjectsView.vue  SettingsPage.vue  SubscriptionPlans.vue  TesteHomeView.vue
picturas-bg-remover-tool-ms/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
picturas-bg-remover-tool-ms/src/: bg_remover_result_message.py
projects-ms/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  requests.http
projects-ms/.sqlx/: query-008b1e97c368bbfef38f17092ad0ca819ec2c4fc5e5b58d1ad752ccf0f217274.json  query-03d9c1960aa3f2fec3b988042cd7ea65d8a499ba4149ae9805de33fda523ac74.json  query-200e4225d988f6b4d41421e270fbfa0ea9d306cff98142e633b9f74ff56346b1.json  query-314f6ad8c995371a542d515d9b803577ef21516b76f45b23db3b6d608f686368.json  query-3418c32c6cb095b014f20caa56c0b734139366574168546f6931056a567c75ff.json  query-3771c0aa1f40dd0d82edda3605b82e1e97018b310ccaba30827df429c708f411.json  query-828bd0746310a11036da622d4db738e4658fae4d8d8d3948ca1e94f3aacc1903.json  query-83b6f071180df760768b2e86650dfe4c0bdf7262a2d51bbe22b280feec145c97.json  query-91adf4d3c92cf6b4072df94cc51d3adecfba0b67fd4e3b19ec5b9f4394b7e5c8.json  query-a2de4270628bfd3268b1553c23de2ea5cf020260b01737f8f0ffa8e3605a01c5.json  query-a5e9bce066377d3cb2a4d08bd781c6c92d520d113dc466a6d83621dd9d6bc44b.json  query-b1ae204256db447f3eb3fe9e5d79b14962d17e5b6efc93e1b3a7a533753db696.json  query-bf39b84f35583300b2e3141cbb287d199823fbfe97ecf5f3e8427bc542d32ecd.json  query-d883faa0bc9c97c0bbfde78ac94ccc0922be50f1678e69639bef2185032e81fa.json  query-f0860439d8cf448c07a261f9915e9598431b0920d8307bb1f755ff2e8943fd11.json
projects-ms/migrations/: 20250109183810_create-tables.sql
projects-ms/src/: config.rs  error.rs  main.rs  model.rs  project.rs  router.rs  state.rs  user.rs
projects-ms/src/image/: controller.rs  model.rs  router.rs
projects-ms/src/project/: controller.rs  model.rs  router.rs
projects-ms/src/tool/: controller.rs  mod.rs  model.rs  queue.rs  router.rs  websocket.rs
projects-ms/src/tool/amqp/: message.rs  mod.rs  rabbit_controller.rs
subs-ms/: Dockerfile  database.py  db_interact.py  docker-compose.yml  models.py  requirements.txt  schemas.py  stripe_service.py
subs-ms/src/: database.py  main.py  models.py  stripe_service.py
subscription-ms/: requirements.txt
subscription-ms/src/: database.py  db_interact.py  models.py
subscriptions-ms/: .env.example  Dockerfile  docker-compose.yml
subscriptions-ms/src/: database.py  db_interact.py  models.py  stripe_service.py
tools/: Cargo.toml  Dockerfile  input.json
tools-ms/: Cargo.toml  Dockerfile  docker-compose.yml
tools-ms/.cargo/: config.toml
tools-ms/src/: handle.rs  main.rs  message_queue.rs  tools.rs
tools/src/: handle.rs  main.rs  message.rs  message_queue.rs  tools.rs  utils.rs
users-ms/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  requests.http
users-ms/.sqlx/: query-81841e374312b8174c24b990b9e8c0e08918533318e559226979dddef7c3351b.json  query-82b928932d982fb2670d9ad4085ec715d8b3ca42c8109e9bd493e4c938fd746b.json  query-88ab40f815a04112c23c1dde6b1c9afff0e030585b44259a9fb7da9cfb10537d.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
users-ms/keys/: setup.sh
users-ms/migrations/: 20250114231026_create_users.sql
users-ms/src/: config.rs  error.rs  jwt.rs  main.rs  password.rs  redis.rs  router.rs  user.rs
watermark-tool-ms/: .env.example  docker-compose.yml
