[package]
name = "projects-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = "0.8.3"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }
