[package]
name = "projects-ms"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros", "multipart"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.26", features = ["env", "derive"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.10"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
anyhow = "1.0.95"
lapin = "2.5.0"
serde_json = "1.0.135"
futures-util = "0.3.31"
dashmap = "6.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono", "env-filter", "serde", "serde_json"] }
tower-http = { version = "0.6.2", features = ["trace"] }
